add data readme

--- a/nbs/feature_extractors.ipynb
+++ b/nbs/feature_extractors.ipynb
@@ -43,10 +43,19 @@
     "import torch\n",
     "import fasttext\n",
     "from transformers import AutoTokenizer, AutoModel\n",
-    "from thingsvision import get_extractor\n",
+    "from thingsvision import get_extractor, get_extractor_from_model\n",
     "from thingsvision.utils.data import ImageDataset, DataLoader\n",
     "import tensorflow_hub as hub\n",
     "import openai\n",
+    "from harmonization.models import (\n",
+    "    load_ViT_B16,\n",
+    "    load_ResNet50,\n",
+    "    load_VGG16,\n",
+    "    load_EfficientNetB0,\n",
+    "    load_tiny_ConvNeXT,\n",
+    "    load_tiny_MaxViT,\n",
+    "    load_LeViT_small,\n",
+    ")\n",
     "\n",
     "\n",
     "from NaturalCogSci.helpers import get_project_root"
@@ -185,29 +194,43 @@
     "    Extract visual embedding using `thingsvision`\n",
     "    \"\"\"\n",
     "\n",
+    "    harmonization_variants = {\n",
+    "    \"ViT_B16\": load_ViT_B16,\n",
+    "    \"ResNet50\": load_ResNet50,\n",
+    "    \"VGG16\": load_VGG16,\n",
+    "    \"EfficientNetB0\": load_EfficientNetB0,\n",
+    "    \"tiny_ConvNeXT\": load_tiny_ConvNeXT,\n",
+    "    \"tiny_MaxViT\": load_tiny_MaxViT,\n",
+    "    \"LeViT_small\": load_LeViT_small,\n",
+    "    }\n",
+    "\n",
     "    with open(join(project_root, \"data\", \"model_configs.json\")) as f:\n",
     "        file = json.load(f)\n",
     "    model_config = file[feature_name]\n",
     "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "    model_parameters = None\n",
     "    save_name = feature_name\n",
-    "    if feature_name.startswith(\"clip\"):\n",
-    "        model_parameters = {\"variant\": feature_name.split(\"clip_\")[1]}\n",
-    "        save_name = feature_name\n",
-    "        feature_name = \"clip\"\n",
-    "    elif feature_name.startswith(\"Harmonization\"):\n",
-    "        model_parameters = {\"variant\": feature_name.split(\"Harmonization_\")[1]}\n",
-    "        save_name = feature_name\n",
-    "        feature_name = \"Harmonization\"\n",
+    "    if feature_name.startswith(\"Harmonization\"):\n",
+    "        extractor = get_extractor_from_model(\n",
+    "            model=harmonization_variants[feature_name.split(\"Harmonization_\")[-1]](), \n",
+    "            device=device,\n",
+    "            backend=\"tf\",\n",
+    "            )\n",
+    "    else:\n",
     "\n",
-    "    save_name = save_name.replace(\"/\", \"_\")\n",
-    "    extractor = get_extractor(\n",
-    "        model_name=feature_name,\n",
-    "        source=model_config[\"source\"],\n",
-    "        device=device,\n",
-    "        pretrained=True,\n",
-    "        model_parameters=model_parameters,\n",
-    "    )\n",
+    "        if feature_name.startswith(\"clip\"):\n",
+    "            model_parameters = {\"variant\": feature_name.split(\"clip_\")[1]}\n",
+    "            save_name = feature_name\n",
+    "            feature_name = \"clip\"\n",
+    "\n",
+    "        save_name = save_name.replace(\"/\", \"_\")\n",
+    "        extractor = get_extractor(\n",
+    "            model_name=feature_name,\n",
+    "            source=model_config[\"source\"],\n",
+    "            device=device,\n",
+    "            pretrained=True,\n",
+    "            model_parameters=model_parameters,\n",
+    "        )\n",
     "\n",
     "    stimuli_path = join(project_root, \"stimuli\")\n",
     "    batch_size = 1\n",
