--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -92,7 +92,9 @@
    "source": [
     "## Data\n",
     "\n",
-    "The data is shared under the `data` folder, which is linked to an OSF repository. All the behavioural (anaonymised) and modelling data can be found there."
+    "The data is shared in an OSF repository. It should be put under the `data` folder, if you want to use the code as is. All the behavioural (anaonymised) and modelling data can be found in the OSF repo. Further detail about the data are found under the `README.md` file in the `data` folder.\t\n",
+    "\n",
+    "The OSF repository is here: https://osf.io/h3t52/"
    ]
   }
  ],
