--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "The data is shared in an OSF repository. It should be put under the `data` folder, if you want to use the code as is. All the behavioural (anaonymised) and modelling data can be found in the OSF repo. Further detail about the data are found under the `README.md` file in the `data` folder.\t\n",
     "\n",
-    "The OSF repository is here: https://osf.io/h3t52/"
+    "The OSF repository is here: [https://osf.io/h3t52/](https://osf.io/h3t52/)"
    ]
   }
  ],
