add stimuli info

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -90,6 +90,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Stimuli\n",
+    "\n",
+    "If you want to extract the features from the images , you need to download the THINGS database under the `stimuli` folder.\n",
+    "\n",
+    "This can be done from the following link: \n",
+    "\n",
+    "<https://things-initiative.org/uploads/THINGS/images.zip>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data\n",
     "\n",
     "The data is shared in an OSF repository. It should be put under the `data` folder, if you want to use the code as is. All the behavioural (anaonymised) and modelling data can be found in the OSF repo. Further detail about the data are found under the `README.md` file in the `data` folder.\t\n",
