--- a/nbs/feature_extractors.ipynb
+++ b/nbs/feature_extractors.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Extractors\n",
+    "## Feature Extraction Functions\n",
     "\n",
     "> Functions to extract features from DNNs.\n",
     "\n",
