--- a/nbs/helpers.ipynb
+++ b/nbs/helpers.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Helpers\n",
+    "## Helper Functions\n",
     "\n",
     "> All the helper functions used in the project"
    ]
