--- a/nbs/learners.ipynb
+++ b/nbs/learners.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Learners\n",
+    "## Learner Classes\n",
     "\n",
     "> Learning models used in both tasks."
    ]
