--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -72,7 +72,11 @@
     "export NATURALCOGSCI_ROOT=/path/to/NaturalCogSci\n",
     "```\n",
     "\n",
-    "For me, R could not read this variable from the shell, so I had to set it in the `~/.Renviron` file as well"
+    "For me, R could not read this variable from the shell, so I had to set it in the `~/.Renviron` file as well as follows:\n",
+    "\n",
+    "```bash\n",
+    "NATURALCOGSCI_ROOT=/path/to/NaturalCogSci\n",
+    "```"
    ]
   },
   {
