--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "##  Read Me!\n",
     "\n",
-    "> Code for the project \"Language Aligned Visual Representations Predict Human Behavior in Naturalistic Learning Tasks\""
+    "> Code for the project \"Language Aligned Visual Representations Predict Human Behavior in Naturalistic Learning Tasks\"\n",
+    "\n",
+    "Please see the [paper](https://arxiv.org/abs/2306.09377) for the associated work."
    ]
   },
   {
@@ -113,6 +115,27 @@
     "The data is shared in an OSF repository. It should be put under the `data` folder, if you want to use the code as is. All the behavioural (anaonymised) and modelling data can be found in the OSF repo. Further detail about the data are found under the `README.md` file in the `data` folder.\t\n",
     "\n",
     "The OSF repository is here: [https://osf.io/h3t52/](https://osf.io/h3t52/)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Citation\n",
+    "\n",
+    "If you use our work, please cite our [paper](https://arxiv.org/abs/2306.09377) as such:\n",
+    "\n",
+    "```bibtex\n",
+    "@misc{demircan2023language,\n",
+    "      title={Language Aligned Visual Representations Predict Human Behavior in Naturalistic Learning Tasks}, \n",
+    "      author={Can Demircan and Tankred Saanum and Leonardo Pettini and Marcel Binz and Blazej M Baczkowski and Paula Kaanders and Christian F Doeller and Mona M Garvert and Eric Schulz},\n",
+    "      year={2023},\n",
+    "      eprint={2306.09377},\n",
+    "      archivePrefix={arXiv},\n",
+    "      primaryClass={cs.LG}\n",
+    "}\n",
+    "```\n"
    ]
   }
  ],
