--- a/nbs/helpers.ipynb
+++ b/nbs/helpers.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp helpers"
+    "# | default_exp helpers"
    ]
   },
   {
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exports\n",
-    "#| code-fold: false\n",
+    "# | exports\n",
+    "# | code-fold: false\n",
     "import json\n",
     "import argparse\n",
     "import string\n",
@@ -45,17 +45,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exports\n",
+    "# | exports\n",
     "\n",
-    "def get_project_root(\n",
-    "        ) -> str: # project root\n",
+    "\n",
+    "def get_project_root() -> str:  # project root\n",
     "    \"\"\"\n",
     "    Return project root based on device.\n",
-    "    \n",
+    "\n",
     "    Reads the NATURALCOGSCI_ROOT environment variable\n",
     "    \"\"\"\n",
     "\n",
-    "    return os.getenv('NATURALCOGSCI_ROOT')"
+    "    return os.getenv(\"NATURALCOGSCI_ROOT\")"
    ]
   },
   {
@@ -64,12 +64,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exports\n",
+    "# | exports\n",
     "def prepare_training(\n",
-    "    task: str, # 'reward_learning' or 'category_learning'\n",
-    "    features: str, # which embedding to use. must match the saved .txt files\n",
-    "    cond_file: int # number of the condtion file to prepare arrays for\n",
-    ") -> Tuple[np.ndarray, np.ndarray]: # X,y arrays\n",
+    "    task: str,  # 'reward_learning' or 'category_learning'\n",
+    "    features: str,  # which embedding to use. must match the saved .txt files\n",
+    "    cond_file: int,  # number of the condtion file to prepare arrays for\n",
+    ") -> Tuple[np.ndarray, np.ndarray]:  # X,y arrays\n",
     "    \"\"\"\n",
     "    Prepares the observations and the target values to train models on,\n",
     "    for the given condition file and the given task. The returned arrays\n",
@@ -116,13 +116,13 @@
     "    elif task == \"category_learning\":\n",
     "        TRIALS = 120\n",
     "\n",
-    "        stimuli = df.image.to_list()[:120]\n",
+    "        stimuli = df.image.to_list()[:TRIALS]\n",
     "\n",
     "        stimuli = [file_names.index(stimulus) for stimulus in stimuli]\n",
     "\n",
     "        X = np.zeros((TRIALS, embedding.shape[1]))\n",
     "        X[:] = embedding[stimuli, :]\n",
-    "        y = df.true_category_binary.to_numpy()[:120]\n",
+    "        y = df.true_category_binary.to_numpy()[:TRIALS]\n",
     "\n",
     "    return X, y"
    ]
@@ -153,9 +153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exports\n",
-    "def str2bool(v : str|bool, # input from the command line\n",
-    "             ) -> bool: # Python Boolean\n",
+    "# | exports\n",
+    "def str2bool(\n",
+    "    v: str | bool,  # input from the command line\n",
+    ") -> bool:  # Python Boolean\n",
     "    \"\"\"\n",
     "    Used to parse boolean command line arguments for Python.\n",
     "    \"\"\"\n",
@@ -175,13 +176,13 @@
    "source": [
     "# | exports\n",
     "def id_generator(\n",
-    "    size: int = 10, # length of ID\n",
-    "    chars: str = string.ascii_uppercase + string.digits, # characters to use\n",
-    ") -> str: # unique ID\n",
+    "    size: int = 10,  # length of ID\n",
+    "    chars: str = string.ascii_uppercase + string.digits,  # characters to use\n",
+    ") -> str:  # unique ID\n",
     "    \"\"\"\n",
     "    Used to generate IDs for participants. This is to hide their Prolific IDs.\n",
     "    \"\"\"\n",
-    "    return \"\".join(np.random.choice(list(chars), size=size))\n"
+    "    return \"\".join(np.random.choice(list(chars), size=size))"
    ]
   },
   {
@@ -194,7 +195,7 @@
     "def parse_reward_data() -> None:\n",
     "    \"\"\"\n",
     "    Read and parse json data and condition files of reward learning into pandas dataframes.\n",
-    "    \n",
+    "\n",
     "    Make 2 dataframes:\n",
     "\n",
     "    1. all_df: includes all participants\n",
@@ -239,7 +240,7 @@
     "                \"choice\": beh_file[\"choices\"],\n",
     "                \"reward_received\": beh_file[\"points\"],\n",
     "                \"cond_file\": beh_file_no,\n",
-    "                \"trial\": range(TRIAL_NO)\n",
+    "                \"trial\": range(TRIAL_NO),\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -303,7 +304,7 @@
     "                ),\n",
     "                \"bonus_payment\": np.round(float(df.tail(1).current_pay) - BASE_PAY, 2),\n",
     "                \"dimension\": (trial_df.cond_file_no - 1) % 3,\n",
-    "                \"trial\": range(TRIAL_NO)\n",
+    "                \"trial\": range(TRIAL_NO),\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -322,9 +323,10 @@
    "outputs": [],
    "source": [
     "# | exports\n",
-    "def filter_chance(df: pd.DataFrame, # dataframe to filter\n",
-    "                  task: str # 'reward_learning' or 'category_learning'\n",
-    "                  ) -> None:\n",
+    "def filter_chance(\n",
+    "    df: pd.DataFrame,  # dataframe to filter\n",
+    "    task: str,  # 'reward_learning' or 'category_learning'\n",
+    ") -> None:\n",
     "    \"\"\"\n",
     "    Take large behavioural df, and make two copies:\n",
     "\n",
