slip feature extraction

--- a/nbs/feature_extractors.ipynb
+++ b/nbs/feature_extractors.ipynb
@@ -67,8 +67,8 @@
     "import glob\n",
     "import os\n",
     "from os.path import join\n",
-    "from shutil import rmtree\n",
     "import json\n",
+    "from collections import OrderedDict\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -88,7 +88,17 @@
     "    load_tiny_MaxViT,\n",
     "    load_LeViT_small,\n",
     ")\n",
-    "\n",
+    "from SLIP.models import (\n",
+    "    SLIP_VITS16,\n",
+    "    SLIP_VITB16,\n",
+    "    SLIP_VITL16,\n",
+    "    CLIP_VITS16,\n",
+    "    CLIP_VITB16,\n",
+    "    CLIP_VITL16,\n",
+    "    SIMCLR_VITS16,\n",
+    "    SIMCLR_VITB16,\n",
+    "    SIMCLR_VITL16,\n",
+    ")\n",
     "\n",
     "from NaturalCogSci.helpers import get_project_root"
    ]
@@ -241,6 +251,18 @@
     "        \"LeViT_small\": load_LeViT_small,\n",
     "    }\n",
     "\n",
+    "    slip_variants = {\n",
+    "        \"slip_slip_small\": SLIP_VITS16,\n",
+    "        \"clip_slip_small\": CLIP_VITS16,\n",
+    "        \"simclr_slip_small\": SIMCLR_VITS16,\n",
+    "        \"slip_slip_base\": SLIP_VITB16,\n",
+    "        \"clip_slip_base\": CLIP_VITB16,\n",
+    "        \"simclr_slip_base\": SIMCLR_VITB16,\n",
+    "        \"slip_slip_large\": SLIP_VITL16,\n",
+    "        \"clip_slip_large\": CLIP_VITL16,\n",
+    "        \"simclr_slip_large\": SIMCLR_VITL16,\n",
+    "    }\n",
+    "\n",
     "    with open(join(project_root, \"data\", \"model_configs.json\")) as f:\n",
     "        file = json.load(f)\n",
     "    model_config = file[feature_name]\n",
@@ -253,6 +275,36 @@
     "            device=device,\n",
     "            backend=\"tf\",\n",
     "        )\n",
+    "    elif \"slip\" in feature_name:\n",
+    "        weights = torch.load(\n",
+    "            join(\n",
+    "                project_root,\n",
+    "                \"data\",\n",
+    "                \"embedding_weights_and_binaries\",\n",
+    "                f\"{feature_name}.pth\",\n",
+    "            ),\n",
+    "            map_location=device,\n",
+    "        )\n",
+    "\n",
+    "        model = slip_variants[feature_name](\n",
+    "            ssl_mlp_dim=weights[\"args\"].ssl_mlp_dim,\n",
+    "            ssl_emb_dim=weights[\"args\"].ssl_emb_dim,\n",
+    "            rand_embed=False,\n",
+    "        )\n",
+    "\n",
+    "        state_dict = OrderedDict()\n",
+    "        for k, v in weights[\"state_dict\"].items():\n",
+    "            state_dict[k.replace(\"module.\", \"\")] = v\n",
+    "        model.load_state_dict(state_dict, strict=True)\n",
+    "        model.eval()\n",
+    "        model.to(device)\n",
+    "\n",
+    "        extractor = get_extractor_from_model(\n",
+    "            model=model,\n",
+    "            device=device,\n",
+    "            backend=\"pt\",\n",
+    "        )\n",
+    "\n",
     "    else:\n",
     "        if feature_name.startswith(\"clip\"):\n",
     "            model_parameters = {\"variant\": feature_name.split(\"clip_\")[1]}\n",
@@ -261,7 +313,7 @@
     "        elif feature_name.startswith(\"OpenCLIP\"):\n",
     "            variant_name = feature_name.split(\"OpenCLIP_\")[1].split(\"_laion\")[0]\n",
     "            dataset_name = feature_name.split(f\"{variant_name}_\")[1]\n",
-    "            model_parameters = {\"variant\": variant_name, \"dataset_name\": dataset_name}\n",
+    "            model_parameters = {\"variant\": variant_name, \"dataset\": dataset_name}\n",
     "            save_name = feature_name\n",
     "            feature_name = \"OpenCLIP\"\n",
     "        elif feature_name.startswith(\"DreamSim\"):\n",
@@ -322,9 +374,6 @@
     "    Read features for single images from the temp folder.\n",
     "\n",
     "    Combine them into one large array.\n",
-    "\n",
-    "    If all the features are available for all images, delete the feature folder\n",
-    "    under temp, and return the large array.\n",
     "    \"\"\"\n",
     "\n",
     "    TOTAL_IMAGES = 26107\n",
