custom forward for slip added

--- a/nbs/feature_extractors.ipynb
+++ b/nbs/feature_extractors.ipynb
@@ -300,9 +300,7 @@
     "        model.to(device)\n",
     "\n",
     "        extractor = get_extractor_from_model(\n",
-    "            model=model,\n",
-    "            device=device,\n",
-    "            backend=\"pt\",\n",
+    "            model=model, device=device, backend=\"pt\", forward_fn=model.encode_image\n",
     "        )\n",
     "\n",
     "    else:\n",
